// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch task warnings if it has to 1`] = `
<Gl
  body={
    <DeferredSpinner
      loading={false}
    >
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "message foo",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "message-bar",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "multiline message<br>secondline<br>  third line",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
    </DeferredSpinner>
  }
  headerTitle="warnings"
  onClose={[MockFunction]}
  primaryButton={null}
  secondaryButtonLabel="close"
/>
`;

exports[`should render correctly: default 1`] = `
<Gl
  body={
    <DeferredSpinner
      loading={false}
    >
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "warning 1",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "warning 2",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
    </DeferredSpinner>
  }
  headerTitle="warnings"
  onClose={[MockFunction]}
  primaryButton={null}
  secondaryButtonLabel="close"
/>
`;

exports[`should render correctly: do not show dismissable links for anonymous 1`] = `
<Gl
  body={
    <DeferredSpinner
      loading={false}
    >
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "Lorem ipsum",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div />
      </React.Fragment>
    </DeferredSpinner>
  }
  headerTitle="warnings"
  onClose={[MockFunction]}
  primaryButton={null}
  secondaryButtonLabel="close"
/>
`;

exports[`should render correctly: with dismissable warnings 1`] = `
<Gl
  body={
    <DeferredSpinner
      loading={false}
    >
      <React.Fragment>
        <div
          className="sw-flex sw-items-center sw-mt-2"
        >
          <FlagMessage
            variant="warning"
          >
            <HtmlFormatter>
              <span
                dangerouslySetInnerHTML={
                  {
                    "__html": "Lorem ipsum",
                  }
                }
              />
            </HtmlFormatter>
          </FlagMessage>
        </div>
        <div>
          <div
            className="sw-mt-4"
          >
            <DangerButtonSecondary
              disabled={false}
              onClick={[Function]}
            >
              dismiss_permanently
            </DangerButtonSecondary>
            <DeferredSpinner
              className="sw-ml-2"
              loading={false}
            />
          </div>
        </div>
      </React.Fragment>
    </DeferredSpinner>
  }
  headerTitle="warnings"
  onClose={[MockFunction]}
  primaryButton={null}
  secondaryButtonLabel="close"
/>
`;
